# weather-alerts

./: CMakeLists.txt  CommandLineProcessor.hpp  HttpClient.hpp  README.md  WeatherData.hpp  WeatherLocation.hpp  WeatherSettings.hpp  makefile  makefile_windows  set_git_version_tag.bat  weather-alerts.cpp
